# doug

./: README.md  TODO.md  build.sh  main.py  pyproject.toml
embeddings/: rhc.py
encode/: encode.py
examples/: test.llfpl
language/: lexer.py  syntax.py
memory/: declarative_memory.py
