[project]
name = "doug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch-hd",
]


[dependency-groups]
dev = [
    "ruff>=0.12.5",
]

[tool.uv.sources]
torch-hd = { git = "https://github.com/hanleyc01/torchhd.git" }
